# memory-tracing

./: Makefile.am  Makefile.in  README.md  gl_basics.h  gl_configure.h  gl_interface_f90.c  gl_main.c  gl_malloc_replacements.c  gl_malloc_replacements.h  gl_misc.c  gl_misc.h  glconf.sh  gleipnir.h
misc_old/: debuginfo.c  pub_tool_debuginfo.h
patches/: Makefile.am.lib.patch  debuginfo.patch  hugepage.patch  valgrind_conf_make.patch  wrapmalloc.patch
scripts/: dinero_scripts.sh  fix.dynstats.pl  granfix.dynstats.pl  granfix.pl  makegpifuncs.pl  makegpiheapseg.pl  makegpimemview.c  makegpisegments.pl  makegpistructs.pl
stashed_code/: gl_malloc_wrappers.c  gl_malloc_wrappers.h
tests/: Makefile.in  filter_stderr
